deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-website        #imp
  labels:
    app: website              #mandatory while looking at service  #must add label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: < username/image_name:tag >
        ports:
        - containerPort: 8080
