service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service-lb
spec:
  selector:
    app: website #anything which has a label of {website}
  ports:
    - port: 8080   #port you exposed while creating image
      targetPort: 8080    # leave this to 8080
  type: ClusterIP
